--- a/Docker/compose_db/todoapp/pyproject.toml
+++ b/Docker/compose_db/todoapp/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "backend-code"
+name = "todoapp"
 version = "0.1.0"
 description = ""
 authors = ["Muhammad Talha <talhajoiyamuhammad@gmail.com>"]
@@ -7,8 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-uvicorn = {extras = ["standard"], version = "^0.29.0"}
-fastapi = "^0.111.0"
+uvicorn = "^0.28.0"
+fastapi = "^0.110.0"
+sqlmodel = "^0.0.16"
+psycopg2 = "^2.9.9"
+app = "^0.0.1"
+psycopg = "^3.1.19"
 
 
 [build-system]
