--- a/Docker/dev cont/compose.yaml
+++ b/Docker/dev cont/compose.yaml
@@ -1,10 +1,11 @@
-version: "1.0.0"
-name: TalhaJoiya
+version: "3.9"
+
+name: myapi
 
 services:
   api:
-    build: 
-      context: ./backend_code
-      dockerfile: Dockerfile.dev
-    ports: 
-      - "8000:8000"  # Expose container port 8000 to host port 8000  
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"  # Expose container port 8000 to host port 8000 
