--- a/kafka/compose.yml
+++ b/kafka/compose.yml
@@ -1,6 +1,17 @@
 version: '3.8'
 
 services:
+  api:
+    build:
+      context: ./todo
+      dockerfile: Dockerfile.dev
+    volumes:
+      - ./todo:/code  # Sync local development directory with the container
+    depends_on:
+        - postgres_db
+        - broker
+    ports:
+      - "8000:8000"  # Expose container port 8000 to host port 8000  
   broker:
     image: apache/kafka:3.7.0
     hostname: broker
@@ -22,7 +33,19 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
-
+  postgres_db:
+    image: postgres:latest  # Use the official PostgreSQL image
+    restart: always
+    container_name: PostgresCont
+    environment:
+        - POSTGRES_USER=ziakhan
+        - POSTGRES_PASSWORD=my_password
+        - POSTGRES_DB=mydatabase
+    ports:
+        - '5433:5432'
+    volumes:
+        - postgres_db:/var/lib/postgresql/data
+        
   kafka-ui:
     image: provectuslabs/kafka-ui
     container_name: kafka-ui
